[project]
name = "my-analysis-knowledge"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "MOON-HILL\\tsuki", email = "tsukioka.business@gmail.com" }
]
dependencies = [
    "pandas>=2.3.3",
    "matplot>=0.1.9",
    "jupyter>=1.1.1",
    "scikit-learn>=1.7.2",
    "japanize-matplotlib>=1.1.3",
    "seaborn>=0.13.2",
]
readme = "README.md"
requires-python = ">= 3.8"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = []

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/my_analysis_knowledge"]
